--- a/ComputeME/Base.lproj/Main.storyboard
+++ b/ComputeME/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="14A329f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0O9-5p-QvJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="14A343f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0O9-5p-QvJ">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
         <capability name="Constraints with attributes relative to the layout margin" minToolsVersion="6.0"/>
@@ -118,10 +118,10 @@
             </objects>
             <point key="canvasLocation" x="1184" y="222"/>
         </scene>
-        <!--View Controller-->
+        <!--Setting Scene View Controller-->
         <scene sceneID="Uol-eI-SKi">
             <objects>
-                <viewController id="uOX-ZB-yAC" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SettingScene" useStoryboardIdentifierAsRestorationIdentifier="YES" id="uOX-ZB-yAC" customClass="SettingSceneViewController" customModule="ComputeME" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="dDA-hi-5gl"/>
                         <viewControllerLayoutGuide type="bottom" id="FeD-0W-lkI"/>
@@ -137,6 +137,9 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="modeButtonAction:" destination="uOX-ZB-yAC" eventType="touchUpInside" id="tyl-jm-g7h"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fgl-xb-lvu">
                                 <rect key="frame" x="174" y="79" width="252" height="64"/>
@@ -265,6 +268,9 @@
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5rW-Cc-2av">
                                 <rect key="frame" x="332" y="216" width="51" height="31"/>
+                                <connections>
+                                    <action selector="soundEffectSwitchAction:" destination="uOX-ZB-yAC" eventType="valueChanged" id="zse-jj-Ayi"/>
+                                </connections>
                             </switch>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WxS-gH-jA9">
                                 <rect key="frame" x="234" y="501" width="133" height="44"/>
@@ -273,9 +279,15 @@
                                     <color key="titleColor" red="0.68235294117647061" green="0.078431372549019607" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="resetAllButtonAction:" destination="uOX-ZB-yAC" eventType="touchUpInside" id="sfn-va-Ots"/>
+                                </connections>
                             </button>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QT3-ah-o0e">
                                 <rect key="frame" x="332" y="288" width="51" height="31"/>
+                                <connections>
+                                    <action selector="backgroundSwitchAction:" destination="uOX-ZB-yAC" eventType="valueChanged" id="j5A-kS-Fli"/>
+                                </connections>
                             </switch>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sound Effect" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xd9-mI-BBM">
                                 <rect key="frame" x="139" y="219" width="143" height="25"/>
@@ -302,10 +314,14 @@
                             <constraint firstAttribute="centerX" secondItem="Fgl-xb-lvu" secondAttribute="centerX" id="y7M-f8-JGt"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="backgroundSwitch" destination="5rW-Cc-2av" id="fgc-Ye-fhr"/>
+                        <outlet property="soundEffectSwitch" destination="QT3-ah-o0e" id="hlA-ci-rIe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k78-AV-UoE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1184" y="1008"/>
+            <point key="canvasLocation" x="1184" y="1003"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Hao-iv-co3">
